AdminNavBar align error fixed

--- a/frontend/src/components/AdminNavBar/adminNavBar.css
+++ b/frontend/src/components/AdminNavBar/adminNavBar.css
@@ -1,19 +1,32 @@
-.header-logo-div{
+.header-logo-div1{
     display: flex;
     height: 60px;
+    background-color:#131921;
 }
 
-.btn{
-    padding: 5 5 5 5;
+.header-logo1{
+    width: 50px;
+    margin-top: 18px;
+    object-fit: contain;
+    margin: 0 20px;
+    flex: 15;
+}
+
+.btn_1{
+    padding-top: 5px;
     color: rgb(242, 241, 247);
     background-color: rgb(9, 15, 83);
     text-align: center;
     border: none;
     text-decoration: none;
     margin-right: 20px;
+    margin-bottom: 3px;
+    flex: 1;
+    height: 65%;
+    margin-top: 3px;
 }
 
-.btn:hover {
+.btn_1:hover {
     background-color: #f9fcf9; /* Green */
     color: rgb(38, 15, 171);
   }
@@ -22,7 +35,7 @@
     display: flex;
     width: 100%;
     background-color: #131921;
-    height: 150px;
+    height: 100px;
     margin: 0;
     padding: 0;
 }
@@ -34,7 +47,7 @@
     text-align: center;
     border: none;
     text-decoration: none;
-    margin-top: 75px;
+    margin-top: 20px;
     margin-bottom: 20px;
     flex: 1;
     margin-right: 50px;
